[package]
name = "sdf_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "07f92c9", features = ["glsl"] }
pollster = "0.3"
crevice = {version = "0.13.0"}
mint = "0.5"
nanorand = "0.7"
clap = { version = "4.3.21", features = ["derive"] }
rustfft = "6.1.0"
cpal = "0.15.2"

[dependencies.naga]
git = "https://github.com/gfx-rs/naga"
rev = "bac2d82a430fbfcf100ee22b7c3bc12f3d593079"
version = "0.13.0"
features = ["clone"]
